fix: delete transitions on mobile in Card.css

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -182,11 +182,9 @@
 
     .button:active {
         background: var(--primary-background);
-        transition: background 0.45s ease-in-out;
     }
 
     .card__image:active {
         box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
-        transition: background 0.45s ease-in-out;
     }
 }
